--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       gtag('config', 'GA-PROPERTY-ID');
     </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0000000000000000" crossorigin="anonymous"></script>
-    <title>Codex Health Hub</title>
+    <title>Health Gauge Health Hub</title>
   </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
     <div id="root"></div>
